crates/zizmor/tests/integration/snapshots/integration__snapshot__cache_poisoning-3.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"cache-poisoning/caching-opt-in-boolean-toggle.yml\")).run()?"
---
info[use-trusted-publishing]: prefer trusted publishing for authentication
  --> @@INPUT@@:26:11
   |
24 |         run: |
   |         --- this step
25 |           dotnet build
26 |           dotnet nuget push My.Tool.1.0.0.nupkg --api-key ${{ secrets.NUGET_PUBLISH_KEY }} --source https://api.nuget.org/v3/index.json
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this command
   |
   = note: audit confidence → High

error[cache-poisoning]: runtime artifacts potentially vulnerable to a cache poisoning attack
  --> @@INPUT@@:19:9
   |
 1 |   on: release
   |   ----------- generally used when publishing artifacts generated at runtime
...
19 | /         with:
20 | |           dotnet-version: "5.0.x"
21 | |           cache: true
   | |_____________________^ opt-in for caching here
   |
   = note: audit confidence → Low
   = note: this finding has an auto-fix

4 findings (2 suppressed, 1 fixable): 1 informational, 0 low, 0 medium, 1 high
